fix: Fixing overflow issue in routes dropdown

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,6 +1,5 @@
 .label {
   display: inline-block;
-  padding: 1px;
   padding: 0.75rem;
 
   & > em {
